fixed minor alignment issue

--- a/index.css
+++ b/index.css
@@ -161,7 +161,7 @@ main{
     display: grid;
     grid-template-rows: 1fr auto 1fr;
     /* align-items: center; */
-    align-self: center;
+    align-self: self-start;
 }
 
 .movie-container{
